--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>ToyApp</title>
+  <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= favicon_link_tag 'fake_user.png' %>
